NEW: Add example with Employee crud

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+#Thu Aug 31 14:08:23 CEST 2017
 grailsVersion=3.3.0
+grailsWrapperVersion=1.0.0
 gormVersion=6.1.6.RELEASE
 gradleWrapperVersion=3.5
