--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -11,6 +11,7 @@ grails:
             # Whether to translate GORM events into Reactor events
             # Disabled by default for performance reasons
             events: false
+        failOnError: true
 info:
     app:
         name: '@info.app.name@'
